keplr wallet connection and making the header working

--- a/src/App/components/Header/Header.module.sass
+++ b/src/App/components/Header/Header.module.sass
@@ -90,10 +90,10 @@
     &:hover,
     &.active
         color: $blue
-    &:nth-child(n+3)
+    /*&:nth-child(n+5)
         display: none
         +m
-            display: block
+            display: block*/
 
 .search
     position: relative
